--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "clear && npm install && webpack && clear",
     "eslint": "./node_modules/eslint/bin/eslint.js --fix --config .eslintrc.json ./src/*",
     "start": "node ./dist/main.js"
   },
